tests/invalid/duplicate_nested_key.nano
person..
    name Ariana
    name James

